<resources>
    <string name="app_name">Simple Music Player</string>
    <string name="action_settings">Settings</string>
    <string name="no_songs">No songs in your device</string>
    <string name="no_folders">You haven\'t created any folder yet</string>
    <string name="button_options">Options</string>
    <string name="play">Play</string>
    <string name="move_file">Move file</string>
    <string name="skip_next">Skip next</string>
    <string name="skip_previous">Skip previous</string>
    <string name="cannnot_play_audio">Audio can\'t be played</string>
    <string name="create_folder">Create folder</string>
    <string name="rename_folder">Rename folder</string>
    <string name="folder_name">Folder name</string>
    <string name="invalid_name">Invalid name</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="no_matches">No matches found</string>
    <string name="add_songs">Add songs %1$s</string>
    <string name="add_songs_">Add songs</string>
    <string name="song_name">Song name</string>
    <string name="add">Add</string>
    <string name="search_song">Search songs…</string>
    <string name="permission_warning">The storage permission is need to read the songs in your device!</string>
    <string name="folders">Folders</string>
    <string name="empty_folder">Empty folder</string>
    <string name="delete_folder">Delete folder</string>
    <string name="delete_song">Remove song</string>
    <string name="rename_song">Rename song</string>
    <string name="songs_added_successfully">Songs added successfully</string>
    <string name="select_folder">Select folder</string>
    <string name="file_size">File size</string>
    <string name="location">Location</string>
    <string name="modified_time">Modified time</string>
    <string name="name">Name</string>
    <string name="song_properties">Song properties</string>
    <string name="ok">OK</string>
    <string name="song_in_folder">This song is already included in this folder</string>
    <string name="no_song">No song</string>
    <!-- Context menu items -->
    <string name="context_menu_rename">Rename</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_play">Play</string>
    <string name="context_menu_default_ringtone">Set as Default Ringtone</string>
    <string name="context_menu_contact">Assign to Contact</string>
    <string name="context_menu_share">Share</string>
    <string name="context_menu_default_notification">Set as Default Notification</string>

</resources>
