<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp">

        <!--Name-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorPrimary"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorSecondary"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>


        <!--Location-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorPrimary"
            android:text="@string/location"/>

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorSecondary"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>

        <!--File size-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorPrimary"
            android:text="@string/file_size"/>

        <TextView
            android:id="@+id/file_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorSecondary"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>

        <!--Modified time-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorPrimary"
            android:text="@string/modified_time"/>

        <TextView
            android:id="@+id/modified_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorSecondary"
            android:textSize="16sp"/>

    </LinearLayout>

</ScrollView>