<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_edit"
            android:layout_width="@dimen/option_icon_dimen"
            android:layout_height="@dimen/option_icon_dimen"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/context_menu_rename"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_play"
            app:srcCompat="@drawable/ic_rename_24dp"
            android:layout_marginLeft="16dp" />

        <ImageView
            android:id="@+id/img_play"
            android:layout_width="@dimen/option_icon_dimen"
            android:layout_height="@dimen/option_icon_dimen"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/play"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:srcCompat="@drawable/ic_play_gray_24dp"
            android:layout_marginLeft="16dp" />

        <ImageView
            android:id="@+id/img_share"
            android:layout_width="@dimen/option_icon_dimen"
            android:layout_height="@dimen/option_icon_dimen"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/context_menu_share"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_edit"
            app:srcCompat="@drawable/ic_share_24dp"
            android:layout_marginLeft="16dp" />

        <ImageView
            android:id="@+id/img_delete"
            android:layout_width="@dimen/option_icon_dimen"
            android:layout_height="@dimen/option_icon_dimen"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/context_menu_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_assign_contact"
            app:srcCompat="@drawable/ic_delete_24dp"
            android:layout_marginLeft="16dp" />

        <ImageView
            android:id="@+id/img_default_ringtone"
            android:layout_width="@dimen/option_icon_dimen"
            android:layout_height="@dimen/option_icon_dimen"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/context_menu_default_ringtone"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_properties"
            app:srcCompat="@drawable/ic_pause_24dp"
            android:layout_marginLeft="16dp" />

        <ImageView
            android:id="@+id/img_assign_contact"
            android:layout_width="@dimen/option_icon_dimen"
            android:layout_height="@dimen/option_icon_dimen"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/context_menu_contact"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_default_ringtone"
            app:srcCompat="@drawable/ic_pause_24dp"
            android:layout_marginLeft="16dp" />

        <ImageView
            android:id="@+id/img_properties"
            android:layout_width="@dimen/option_icon_dimen"
            android:layout_height="@dimen/option_icon_dimen"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/song_properties"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_share"
            app:srcCompat="@drawable/ic_info_24dp"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/txt_play"
            android:layout_width="0dp"
            android:layout_height="@dimen/option_text_height"
            android:layout_marginTop="16dp"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingLeft="48dp"
            android:text="@string/context_menu_play"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:paddingStart="48dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/txt_rename"
            android:layout_width="0dp"
            android:layout_height="@dimen/option_text_height"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingLeft="48dp"
            android:text="@string/context_menu_rename"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_play"
            android:paddingStart="48dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/txt_share"
            android:layout_width="0dp"
            android:layout_height="@dimen/option_text_height"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingLeft="48dp"
            android:text="@string/context_menu_share"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_rename"
            android:paddingStart="48dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/txt_properties"
            android:layout_width="0dp"
            android:layout_height="@dimen/option_text_height"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingLeft="48dp"
            android:text="@string/song_properties"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_share"
            android:paddingStart="48dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/txt_default_ringtone"
            android:layout_width="0dp"
            android:layout_height="@dimen/option_text_height"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingLeft="48dp"
            android:text="@string/context_menu_default_ringtone"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_properties"
            android:paddingStart="48dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/txt_assign_contact"
            android:layout_width="0dp"
            android:layout_height="@dimen/option_text_height"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingLeft="48dp"
            android:text="@string/context_menu_contact"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_default_ringtone"
            android:paddingStart="48dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/txt_delete"
            android:layout_width="0dp"
            android:layout_height="@dimen/option_text_height"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingLeft="48dp"
            android:text="@string/context_menu_delete"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_assign_contact"
            android:paddingStart="48dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:layout_marginTop="16dp"
            android:background="?selectableItemBackground"
            android:textColor="@color/textColorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>