<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:gravity="center"
                      android:orientation="vertical"
                      android:clickable="true"
                      android:focusable="true"
                      android:background="@drawable/bg_quarter_1">

        <com.inglesdivino.customViews.CarouselTextView
            android:id="@+id/main_song_title"
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        </LinearLayout>

        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="80dp"
                          android:clickable="true"
                          android:focusable="true"
                          android:background="@drawable/bg_quarter_3"
                          android:orientation="vertical"
                          android:layout_toStartOf="@id/lay_float_btn" android:layout_toLeftOf="@id/lay_float_btn">

                <SeekBar
                        android:id="@+id/player_progress"
                        android:layout_width="match_parent"
                        android:max="200"
                        android:progress="0"
                        android:layout_height="40dp"
                        android:padding="16dp"/>

                <RelativeLayout android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center">
                    <TextView
                            android:id="@+id/song_curr_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:textSize="12sp"
                            android:textColor="@color/white"
                            android:paddingStart="4dp"
                            android:paddingLeft="4dp"
                            android:text="00:15"/>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/song_curr_time"
                            android:layout_toStartOf="@+id/song_duration"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="horizontal" android:layout_toRightOf="@+id/song_curr_time"
                            android:layout_toLeftOf="@+id/song_duration">

                        <ImageView
                                android:id="@+id/skip_previous"
                                android:layout_width="@dimen/btn_size"
                                android:layout_height="@dimen/btn_size"
                                android:padding="8dp"
                                android:contentDescription="@string/skip_previous"
                                app:srcCompat = "@drawable/ic_skip_previous_24dp"/>

                        <ImageView
                                android:id="@+id/play"
                                android:layout_width="@dimen/btn_size"
                                android:layout_height="@dimen/btn_size"
                                android:padding="8dp"
                                android:contentDescription="@string/play"
                                app:srcCompat = "@drawable/ic_pause_24dp"/>

                        <ImageView
                                android:id="@+id/skip_next"
                                android:layout_width="@dimen/btn_size"
                                android:layout_height="@dimen/btn_size"
                                android:padding="8dp"
                                android:contentDescription="@string/skip_next"
                                app:srcCompat = "@drawable/ic_skip_next_24dp"/>

                    </LinearLayout>

                    <TextView
                            android:id="@+id/song_duration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:textSize="12sp"
                            android:textColor="@color/white"
                            android:paddingEnd="4dp"
                            android:paddingRight="4dp"
                            android:text="03:30"/>
                </RelativeLayout>



            </LinearLayout>

            <LinearLayout
                    android:id="@+id/lay_float_btn"
                    android:background="@drawable/bg_quarter_4"
                    android:foreground="@drawable/punta"
                    android:layout_width="80dp" android:layout_height="80dp"
                    android:layout_alignParentEnd="true" android:layout_alignParentRight="true"
                    android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        app:srcCompat="@drawable/ic_folder_24dp"
                        android:layout_marginLeft="16dp"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>

